[package]
name = "alloc-safe"
version = "0.1.3"
edition = "2021"
rust-version = "1.57"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Safe memory allocation, no panic!"
keywords = ["alloc", "memory", "safe", "panic"]
repository = "https://github.com/davidli2010/alloc-safe.git"
homepage = "https://github.com/davidli2010/alloc-safe"
documentation = "https://docs.rs/alloc-safe"

[features]
default = ["global-allocator"]
global-allocator = []
